--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "trailing": "find src -name '*.js' -o -name '*.json' | xargs -n1 sed -i -e 's/\\s\\+$//'"
   },
   "dependencies": {
+    "autolinker": "^3.1.0",
     "autosize": "^3.0.20",
     "axios": "^0.19.0",
     "babel-runtime": "^6.9.2",
