--- a/web/package.json
+++ b/web/package.json
@@ -28,8 +28,7 @@
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "redux-sounds": "^1.1.1",
-    "redux-thunk": "^2.1.0",
-    "socket.io-client": "^2.2.0"
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
