--- a/mobile/app/pubspec.yaml
+++ b/mobile/app/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
     sdk: flutter
   firebase_messaging: ^6.0.9
   flutter_webview_plugin: ^0.3.10
+  flutter_local_notifications: ^1.1.6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
