--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "express-session": "^1.15.1",
     "mongoose": "^5.4.20",
     "nodemailer": "^3.1.4",
-    "socket.io": "^2.1.1"
+    "socket.io": "^2.1.1",
+    "web-push": "^3.4.4"
   }
 }
