--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,13 @@
     "body-parser": "^1.17.1",
     "compression": "^1.6.2",
     "connect-mongo": "^1.3.2",
+    "connect-pg-simple": "^6.2.1",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "express-session": "^1.15.1",
     "mongoose": "^5.4.20",
     "nodemailer": "^3.1.4",
+    "pg": "^8.3.3",
     "socket.io": "^2.1.1"
   }
 }
